--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "dotenv": "^16.4.5"
   }
 }
