--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.4",
     "@tailwindcss/vite": "^4.1.14",
+    "@uiw/codemirror-theme-github": "^4.25.2",
     "@uiw/codemirror-theme-okaidia": "^4.25.2",
     "@uiw/react-codemirror": "^4.25.2",
     "axios": "^1.12.2",
